@@ -31,7 +31,7 @@ allprojects {
     apply plugin: 'maven-publish'
     apply plugin: 'net.ltgt.apt'
     apply plugin: 'project-report'
-    apply plugin: 'com.bmuschko.clover'
+//    apply plugin: 'com.bmuschko.clover'
     apply plugin: "com.diffplug.gradle.spotless"
     apply plugin: 'io.spring.dependency-management'
 
@@ -42,11 +42,11 @@ allprojects {
         }
     }
 
-    clover {
-        report {
-            html = true
-        }
-    }
+//    clover {
+//        report {
+//            html = true
+//        }
+//    }
 
 
     def repos = [
@@ -66,9 +66,9 @@ allprojects {
     }
 
 
-    dependencies {
-        clover 'org.openclover:clover:4.2.0'
-    }
+//    dependencies {
+//        clover 'org.openclover:clover:4.3.1'
+//    }
 
     repositories {
         mavenLocal()
@@ -89,19 +89,37 @@ allprojects {
         }
     }
 
+
     plugins.withType(JavaPlugin) {
 
+
+//        test {
+//            jvmArgs '--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED'
+//            jvmArgs '--add-exports=java.base/sun.nio.ch=ALL-UNNAMED'
+//            jvmArgs '--illegal-access=permit'
+////            jvmArgs([
+////                    '--add-exports java.base/jdk.internal.misc=ALL-UNNAMED',
+////                    '--add-exports java.base/sun.nio.ch=ALL-UNNAMED',
+////                    '--add-exports java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED',
+////                    '--add-exports jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED',
+////                    '--add-exportsjava.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED',
+////                    '--illegal-access=permit',
+////                    '-Djdk.tls.client.protocols=TLSv1.2'
+////            ].join(' '))
+//        }
+
         dependencies {
-            annotationProcessor "org.projectlombok:lombok"
-            compileOnly 'org.projectlombok:lombok'
-            testCompileOnly 'org.projectlombok:lombok'
+            annotationProcessor "org.projectlombok:lombok:1.18.6"
+            compileOnly 'org.projectlombok:lombok:1.18.6'
+            testCompileOnly 'org.projectlombok:lombok:1.18.6'
+            testAnnotationProcessor 'org.projectlombok:lombok:1.18.6'
             implementation 'javax.ws.rs:javax.ws.rs-api'
             implementation 'org.eclipse.persistence:org.eclipse.persistence.moxy'
             implementation 'org.hibernate.javax.persistence:hibernate-jpa-2.1-api'
 
 
             testCompile 'javax.mail:mail'
-            
+
             testImplementation('org.hamcrest:hamcrest-core')
             testImplementation('org.mockito:mockito-core')
 
@@ -160,23 +178,23 @@ publishing {
         }
     }
 
-    publications {
-        maven(MavenPublication) {
-            artifact archiveReports {
-                classifier 'reports'
-            }
-        }
-    }
+//    publications {
+//        maven(MavenPublication) {
+//            artifact archiveReports {
+//                classifier 'reports'
+//            }
+//        }
+//    }
 }
 
 
-assemble.dependsOn cloverAggregateReports
+//assemble.dependsOn cloverAggregateReports
 //assemble.dependsOn 'aggregateJavadocs'
 
 assemble.dependsOn archiveReports
-archiveReports.mustRunAfter cloverAggregateReports
+//archiveReports.mustRunAfter cloverAggregateReports
 //archiveReports.mustRunAfter 'aggregateJavadocs'
 
 
-defaultTasks 'clean', 'build', 'cloverAggregateReports'
+defaultTasks 'clean', 'build'
 
